fixed text overflow on title blob

--- a/css/styles.css
+++ b/css/styles.css
@@ -850,7 +850,7 @@ figcaption {
 .coming-soon-box {
   background-image: url(/images/special-events-images/coming-soon-blob.svg);
   width: 414px;
-  height: 269px;
+  height: 317px;
   margin-bottom: 0px;
 }
 
@@ -1815,7 +1815,7 @@ TABLE OF CONTENTS
 
   .coming-soon-box {
     width: 211px;
-    height: 149px;
+    height: 160px;
   }
 
   .field-trips-box {
